--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <title>Minesweeper</title>
 </head>
 <body>
-  <script src="script.js"></script>
+  <script type="module" src="./Assets/src/script.js"></script>
 </body>
 </html>
